# congresso-rag

./: .gitignore  README.md  congresso-rag.ipynb  instructions.txt  main.py  pyproject.toml
util/: rag.py  text_preprocessor.py
